--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="launchView" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@mipmap/splash</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
 
     <!-- Base application theme. -->
     <style name="MyTransparent" parent="Theme.AppCompat.Light.NoActionBar">
@@ -40,6 +45,7 @@
         <item name="android:backgroundDimEnabled">true</item>
         <!--模糊-->
     </style>
+
     <style name="progress_dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
