--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -26,7 +26,7 @@
     </RelativeLayout>
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_time"
         android:layout_width="@dimen/cl_menu_item_width"
         android:layout_height="@dimen/cl_menu_item_height"
@@ -80,9 +80,9 @@
             android:layout_marginTop="@dimen/tv_date_margin_top"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_dialogue"
         android:layout_width="@dimen/cl_menu_item_width"
         android:layout_height="@dimen/cl_menu_item_height"
@@ -128,9 +128,9 @@
             android:layout_marginTop="@dimen/tv_title_margin_top"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_elector_map"
         android:layout_width="@dimen/cl_menu_item_width"
         android:layout_height="@dimen/cl_menu_item_height"
@@ -167,6 +167,6 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_elector_map"
             android:layout_marginTop="@dimen/tv_title_margin_top"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
