--- a/app/src/main/res/layout/activity_selector_language.xml
+++ b/app/src/main/res/layout/activity_selector_language.xml
@@ -40,7 +40,7 @@
 
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_language"
         android:layout_width="match_parent"
         android:layout_weight="1"
